--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,3 +14,4 @@ warning.time.NO_TIME_ENTRY=No booking entries found
 warning.time.EMPTY_ENTRY_LIST=No bookings for this month found
 warning.time.HOLIDAY=Warning: Booked entries after work hours
 warning.time.WEEKEND=Warning: Booked entries after work hours
+warning.time.WRONG_DOCTOR_APPOINTMENT=Warning: Doctor-Appointment outside core-working hours
