--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,6 @@ warning.time.OUTSIDE_CORE_WORKING_TIME=Kontrolle des Gleitzeitrahmens (06:00 bis
 warning.time.TIME_OVERLAP=Doppelbuchung \u00FCber denselben Zeitraum gefunden
 warning.time.NO_TIME_ENTRY=Keine Buchung oder Abwesenheit vorhanden
 warning.time.EMPTY_ENTRY_LIST=Keine Buchung oder Abwesenheit f√ºr dieses Monat vorhanden
-warning.time.HOLIDAY=Warnung: Buchung au√üerhalb eines Arbeitstages
-warning.time.WEEKEND=Warnung: Buchung au√üerhalb eines Arbeitstages
-warning.time.WRONG_DOCTOR_APPOINTMENT=Warnung: Doktorbuchung a√üuﬂerhalb der Sollarbeitszeit
+warning.time.HOLIDAY=Warnung: Buchung auﬂerhalb eines Arbeitstages
+warning.time.WEEKEND=Warnung: Buchung auﬂerhalb eines Arbeitstages
+warning.time.WRONG_DOCTOR_APPOINTMENT=Warnung: Doktorbuchung auﬂerhalb der Sollarbeitszeit
