--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,7 +24,7 @@ warning.journey.INVALID_WORKING_LOCATION=Ung\u00FCltiger Arbeitsort angegeben be
 warning.time.OUTSIDE_CORE_WORKING_TIME=Kontrolle des Gleitzeitrahmens (06:00 bis 22:00 Uhr), bei Buchungen au\u00DFerhalb des Gleitzeitrahmens bitte um R\u00FCcksprache mit HR
 warning.time.TIME_OVERLAP=Doppelbuchung \u00FCber denselben Zeitraum gefunden
 warning.time.NO_TIME_ENTRY=Keine Buchung oder Abwesenheit vorhanden
-warning.time.EMPTY_ENTRY_LIST=Keine Buchung oder Abwesenheit f√ºr dieses Monat vorhanden
-warning.time.HOLIDAY=Warnung: Buchung auﬂerhalb eines Arbeitstages
-warning.time.WEEKEND=Warnung: Buchung auﬂerhalb eines Arbeitstages
-warning.time.WRONG_DOCTOR_APPOINTMENT=Warnung: Doktorbuchung auﬂerhalb der Sollarbeitszeit
+warning.time.EMPTY_ENTRY_LIST=Keine Buchung oder Abwesenheit f\u00FCr dieses Monat vorhanden
+warning.time.HOLIDAY=Warnung: Buchung au\u00DFerhalb eines Arbeitstages
+warning.time.WEEKEND=Warnung: Buchung au\u00DFerhalb eines Arbeitstages
+warning.time.WRONG_DOCTOR_APPOINTMENT=Warnung: Doktorbuchung au\u00DFerhalb der Sollarbeitszeit
