[Gepardec/mega#683] adapt mail subject for employee check reminder

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-mail.EMPLOYEE_CHECK_PROJECTTIME.subject=Friendly Reminder: Buchungen kontrollieren
+mail.EMPLOYEE_CHECK_PROJECTTIME.subject=Reminder: Buchungen bis heute Abend in MEGA bestätigen
 mail.PL_PROJECT_CONTROLLING.subject=Reminder: Projekte kontrollieren und abrechnen
 mail.OM_CONTROL_EMPLOYEES_CONTENT.subject=Reminder: Kontrolle Mitarbeiter
 mail.OM_RELEASE.subject=Reminder: Freigaben durchf\u00FChren
