[Gepardec/mega#702] notify creator of message about processing errors in EmailReceiver

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ mail.COMMENT_CREATED.subject=MEGA: Anmerkung von {0} erhalten
 mail.COMMENT_CLOSED.subject=MEGA: Anmerkung von {0} erledigt
 mail.COMMENT_MODIFIED.subject=MEGA: Anmerkung von {0} aktualisiert
 mail.COMMENT_DELETED.subject=MEGA: Anmerkung von {0} gelöscht
+mail.ZEP_COMMENT_PROCESSING_ERROR.subject=MEGA: Kommentar an {0} konnte nicht verarbeitet werden
 warning.EXCESS_WORKTIME=Warnung: Sie haben mehr als 10 Stunden eingetragen
 warning.MISSING_BREAKTIME=Warnung: Sie haben zu wenig Pause eingetragen
 warning.MISSING_RESTTIME=Warnung: Sie haben zu wenig Ruhezeit eingetragen
