[Gepardec/mega#750] change WarningTypes due to new frontend and implement time warning service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,3 +29,6 @@ warning.time.EMPTY_ENTRY_LIST=Keine Buchung oder Abwesenheit f\u00FCr dieses Mon
 warning.time.HOLIDAY=Warnung: Buchung au\u00DFerhalb eines Arbeitstages
 warning.time.WEEKEND=Warnung: Buchung au\u00DFerhalb eines Arbeitstages
 warning.time.WRONG_DOCTOR_APPOINTMENT=Warnung: Doktorbuchung au\u00DFerhalb der Sollarbeitszeit
+warning.time.MISSING_BREAK_TIME=Warnung: Zu wenig Pausenzeit eingetragen
+warning.time.MISSING_REST_TIME=Warnung: Ruhezeit wurde nicht eingehalten
+warning.time.EXCESS_WORKING_TIME_PRESENT=Warnung: Zu viel Arbeitszeit gebucht
