--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,3 +15,6 @@ warning.time.EMPTY_ENTRY_LIST=No bookings for this month found
 warning.time.HOLIDAY=Warning: Booked entries after work hours
 warning.time.WEEKEND=Warning: Booked entries after work hours
 warning.time.WRONG_DOCTOR_APPOINTMENT=Warning: Doctor-Appointment outside core-working hours
+warning.time.MISSING_BREAK_TIME=Warning: Breaktime was not sufficient
+warning.time.MISSING_REST_TIME=Warnung: Resttime was not sufficient
+warning.time.EXCESS_WORKING_TIME_PRESENT=Warnung: Booked too much time
