[Gepardec/mega#760] add LocationRelevantSetJourneyCalculator for ProjectEntry

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,3 +32,4 @@ warning.time.WRONG_DOCTOR_APPOINTMENT=Warnung: Doktorbuchung au\u00DFerhalb der 
 warning.time.MISSING_BREAK_TIME=Warnung: Zu wenig Pausenzeit eingetragen
 warning.time.MISSING_REST_TIME=Warnung: Ruhezeit wurde nicht eingehalten
 warning.time.EXCESS_WORKING_TIME_PRESENT=Warnung: Zu viel Arbeitszeit gebucht
+warning.journey.LOCATION_RELEVANT_SET=Das Flag "Ort projektrelevant" darf nur gesetzt sein, wenn die Reisezeit verrechnet wird. Stimme dich mit deinem PL ab
