--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,3 +18,4 @@ warning.time.WRONG_DOCTOR_APPOINTMENT=Warning: Doctor-Appointment outside core-w
 warning.time.MISSING_BREAK_TIME=Warning: Breaktime was not sufficient
 warning.time.MISSING_REST_TIME=Warnung: Resttime was not sufficient
 warning.time.EXCESS_WORKING_TIME_PRESENT=Warnung: Booked too much time
+warning.journey.LOCATION_RELEVANT_SET=The "Location relevant to the project" flag may only be set if travel time is billed. Coordinate with your PL
