--- a/src/test/resources/messages.properties
+++ b/src/test/resources/messages.properties
@@ -4,6 +4,7 @@ mail.OM_CONTROL_EMPLOYEES_CONTENT.subject=Reminder: Kontrolle Mitarbeiter
 mail.OM_RELEASE.subject=Reminder: Freigaben durchf\u00FChren
 mail.OM_ADMINISTRATIVE.subject=Reminder: Administratives
 mail.OM_SALARY.subject=Reminder: Geh\u00E4lter
+mail.OM_CONTROL_PROJECTTIMES.subject=Reminder: Administrative Projektzeiten kontrollieren (Monatsende)
 mail.COMMENT_CREATED.subject=MEGA: Anmerkung von {0} erhalten
 mail.COMMENT_CLOSED.subject=MEGA: Anmerkung von {0} erledigt
 mail.COMMENT_MODIFIED.subject=MEGA: Anmerkung von {0} aktualisiert
